--- a/index.html
+++ b/index.html
@@ -8,26 +8,30 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<nav>
-    <div class="container">
-        <img src="https://cdn.pixabay.com/photo/2019/08/29/06/24/elephants-4438284__340.jpg">
-        <ul>
-            <li>Historia</li>
-            <li>Mapa</li>
-            <li>Cennik</li>
-            <li>Kontakt</li>
-        </ul>
-        <h1>ZOO Częstochowa</h1>
-    </div>
-</nav>
 <header>
-    <div>
+    <nav>
+        <div class="container">
+            <div class="logo">
+                <img src="https://cdn.pixabay.com/photo/2019/08/29/06/24/elephants-4438284__340.jpg">
+                <h2>ZOO Częstochowa</h2>
+            </div>
+            <ul>
+                <li>Historia</li>
+                <li>Mapa</li>
+                <li>Cennik</li>
+                <li>Kontakt</li>
+            </ul>
+        </div>
+    </nav>
+</header>
+<section class="jumbotron">
+    <div class="container">
         <div>
             <h1>Zarezerwuj termin już dziś</h1>
             <a class="button">rezerwuj</a>
         </div>
     </div>
-</header>
+</section>
 <main class="container text">
     <h2>Lorem ipsum dolor sit amet</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sem augue, sollicitudin at nisl ac,
